# advent-of-code-2022

./: .gitignore  Cargo.toml  README.md  pyproject.toml
python/: Day 1-5.ipynb  Day 16.ipynb  Day 22.ipynb
src/: lib.rs
